# synapse

./: README.md  pyproject.toml
synapse/: model.ipynb
synapse/utils/: _validation.py  config.json
